bug fix on hamburguer icon display on firefox

--- a/react-app/src/components/Layout/Header.module.css
+++ b/react-app/src/components/Layout/Header.module.css
@@ -156,7 +156,7 @@
   }
 }
 
-.hamburguer-menu {
+.hamburguer-menu,.hamburguer-menu_button {
   display: none;
 }
 
